# seasadj

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml  test.yml
docs/: porting-notes.ja.md
src/seasadj/: __init__.py  __main__.py  api.py  ftn.py  main.py  out.py  reg.py  rep.py  st1.py  st2.py  trb.py  var.py  wma.py
tests/: conftest.py  test_api.py  test_golden.py
